--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>苏打开放平台</title>
     <meta name="description" content="苏打开放平台文档" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css" />
   </head>
 
   <body>
@@ -30,24 +30,24 @@
 
 
   <!-- docsify -->
-   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 
 	<!-- plugins deps -->
-	<script src="//unpkg.com/raphael"></script>
-  <script src="//unpkg.com/underscore"></script>
+	<script src="//cdn.jsdelivr.net/npm/raphael"></script>
+  <script src="//cdn.jsdelivr.net/npm/underscore"></script>
 
   <!-- plugins -->
-  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
-  <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
-	<script src="//unpkg.com/docsify-sequence-diagram/dist/docsify-sequence-diagram.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/docsify-sequence-diagram/dist/docsify-sequence-diagram.min.js"></script>
 
   <!-- language highlight -->
-  <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-http.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-javascript.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-php.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-go.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-json.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-http.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-javascript.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-php.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-go.min.js"></script>
 
 </html>
